# LeaguePredictor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LEP.md  README.md  main.py  pants.ci.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run-docker.sh
.devcontainer/: devcontainer.json
data/: format_data.py  requirements.txt  retrieve_data.py  train_model.py
leaguepy/: __init__.py  main.py
leaguepy/data/: retrieve_data.py
leaguepy/src/: constants.py  exploratory.py  format_data.py  train_model.py
src/: format_data.py  reader_writer.py  train_model.py
src/pylegends/: format_data.py  main.py
src/pylegends/data/: retrieve_data.py
src/pylegends/scripts/: train_model.py
