[project]
name = "LeaguePy"
version = "1.0.0"
description = "A Python package for predicting the outcomes of League of Legends games."
authors = [
    { name = "Jonathan Huster", email = "jon-what-is-your-email?@gmail.com" },
    { name = "Stefan Dalecki", email = "sjdalecki@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["league", "legends", "python"]
dependencies = [
    'numpy>1',
    'pandas>2',
    'pip-tools',
    'pyarrow',
    'python-dotenv',
    'requests',
    'scikit-learn',
]


[project.optional-dependencies]
dev = ["pytest", "flake8", "black", "ruff", "nox"]
